--- a/build.yaml
+++ b/build.yaml
@@ -4,28 +4,28 @@
 # control, add individual board + shield combinations to
 # the `include` property, e.g:
 #
-# board: [ "nice_nano_v2" ]
-# shield: [ "corne_left", "corne_right" ]
+board: [ "nice_nano" ]
+shield: [ "skeletyl_v2_elitec_left", "skeletyl_v2_elitec_right" ]
 # include:
 #   - board: bdn9_rev2
 #   - board: nice_nano_v2
 #     shield: reviung41
 #
----
-include:
-  - board: nice_nano
-    shield: scylla_dmmpcb_left
-  - board: nice_nano
-    shield: scylla_dmmpcb_right
-  - board: nice_nano_v2
-    shield: cradio_left
-  - board: nice_nano_v2
-    shield: cradio_right
-  - board: nice_nano_v2
-    shield: bastyl_left
-  - board: nice_nano_v2
-    shield: bastyl_right
-  - board: nice_nano_v2
-    shield: skeletyl_v2_elitec_left
-  - board: nice_nano_v2
-    shield: skeletyl_v2_elitec_right
+# ---
+# include:
+#   - board: nice_nano
+#     shield: scylla_dmmpcb_left
+#   - board: nice_nano
+#     shield: scylla_dmmpcb_right
+#   - board: nice_nano_v2
+#     shield: cradio_left
+#   - board: nice_nano_v2
+#     shield: cradio_right
+#   - board: nice_nano_v2
+#     shield: bastyl_left
+#   - board: nice_nano_v2
+#     shield: bastyl_right
+#   - board: nice_nano_v2
+#     shield: skeletyl_v2_elitec_left
+#   - board: nice_nano_v2
+#     shield: skeletyl_v2_elitec_right
